[gd_scene load_steps=6 format=3 uid="uid://dxa4ejy2txemw"]

[ext_resource type="Script" path="res://Scripts/UI scripts/pause_menu.gd" id="1_al5pg"]
[ext_resource type="Shader" path="res://Assets/shaders/main_menu.gdshader" id="2_c42hx"]
[ext_resource type="Theme" uid="uid://dk45mkovpfyxo" path="res://UI/Themes/UI_Theme1.tres" id="2_kif4h"]
[ext_resource type="PackedScene" uid="uid://6jacgx8gc8p7" path="res://Scenes/UI/options_menu.tscn" id="4_cjnqo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6g87w"]
shader = ExtResource("2_c42hx")
shader_parameter/amount = 3.0

[node name="pauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_al5pg")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_6g87w")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1000.0
offset_top = -1000.0
offset_right = 1000.0
offset_bottom = 1000.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.447059)

[node name="PauseMenu" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PauseMenu"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme = ExtResource("2_kif4h")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/PanelContainer"]
layout_mode = 2
theme = ExtResource("2_kif4h")

[node name="Label" type="Label" parent="PauseMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_kif4h")
text = "W, A, S, D keys to move up, left, down, right.
Spacebar to jump
Left mouse button to shoot.
press resume to unpause"

[node name="Resume" type="Button" parent="PauseMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_kif4h")
text = "Resume
"

[node name="Settings" type="Button" parent="PauseMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_kif4h")
text = "Settings"

[node name="Quit" type="Button" parent="PauseMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_kif4h")
text = "Quit"

[node name="OptionsMenu" parent="." instance=ExtResource("4_cjnqo")]
visible = false
layout_mode = 1

[connection signal="pressed" from="PauseMenu/PanelContainer/VBoxContainer/Resume" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="PauseMenu/PanelContainer/VBoxContainer/Resume" to="PauseMenu" method="_on_play_pressed"]
[connection signal="pressed" from="PauseMenu/PanelContainer/VBoxContainer/Resume" to="PauseMenu" method="_on_continue_pressed"]
[connection signal="pressed" from="PauseMenu/PanelContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PauseMenu/PanelContainer/VBoxContainer/Settings" to="PauseMenu" method="_on_settings_pressed"]
[connection signal="pressed" from="PauseMenu/PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PauseMenu/PanelContainer/VBoxContainer/Quit" to="PauseMenu" method="_on_quit_pressed"]
